force-app/main/default/objects/Quote__c/fields/Additional_Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contract_Date__c</fullName>
    <label>Additional Contract Date</label>
    <type>Date</type>
</CustomField>