force-app/main/default/objects/Quote__c/fields/AmountBuyinginclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyinginclTaxLocal__c</fullName>
    <label>Amount Buying incl Tax(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>