force-app/main/default/objects/Quote__c/fields/AmountofTaxBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountofTaxBuyingLocal__c</fullName>
    <label>Amount of Tax-Buying(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>