force-app/main/default/objects/Quote__c/fields/AmountofTaxSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountofTaxSellingLocal__c</fullName>
    <label>Amount of Tax-Selling(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>