force-app/main/default/objects/Quote__c/fields/AmountSellinginclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountSellinginclTaxLocal__c</fullName>
    <label>Amount Selling incl Tax(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>