force-app/main/default/objects/Quote__c/fields/CargoMode__c.field-meta.xml
<CustomField>
    <fullName>CargoMode__c</fullName>
    <label>Cargo Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCL</fullName>
            </value>
            <value>
                <fullName>LCL</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
            <value>
                <fullName>BULK</fullName>
            </value>
            <value>
                <fullName>MTY</fullName>
            </value>
            <value>
                <fullName>FCL&amp;MTY</fullName>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>