force-app/main/default/objects/Quote__c/fields/CCCBTType__c.field-meta.xml
<CustomField>
    <fullName>CCCBTType__c</fullName>
    <label>C.C/CBT Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CrossBorderType</valueSetName>
    </valueSet>
</CustomField>