force-app/main/default/objects/Quote__c/fields/checkQuotePIC__c.field-meta.xml
<CustomField>
    <fullName>checkQuotePIC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checkQuotePIC</label>
    <type>Checkbox</type>
</CustomField>