force-app/main/default/objects/Quote__c/fields/Commodity1__c.field-meta.xml
<CustomField>
    <fullName>Commodity1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commodity</label>
    <referenceTo>Commodity__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>