force-app/main/default/objects/Quote__c/fields/Compare_profit__c.field-meta.xml
<CustomField>
    <fullName>Compare_profit__c</fullName>
    <formula>IF ( Profit_INCL_Tax_Actual__c &lt;=  0.05* TotalSellingInclTaxActual__c  &amp;&amp; Profit_INCL_Tax_Actual__c  &lt;&gt; 0 &amp;&amp; TotalSellingInclTaxActual__c  &lt;&gt; 0 , TRUE, FALSE)</formula>
    <label>Compare profit</label>
    <type>Checkbox</type>
</CustomField>