force-app/main/default/objects/Quote__c/fields/CompensationTerm__c.field-meta.xml
<CustomField>
    <fullName>CompensationTerm__c</fullName>
    <label>Compensation term</label>
    <type>TextArea</type>
</CustomField>