force-app/main/default/objects/Quote__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>