force-app/main/default/objects/Quote__c/fields/ContainerTypeQuantity__c.field-meta.xml
<CustomField>
    <fullName>ContainerTypeQuantity__c</fullName>
    <label>Container Type*Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>