force-app/main/default/objects/Quote__c/fields/ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>ContractEndDate__c</fullName>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>