force-app/main/default/objects/Quote__c/fields/ContractID__c.field-meta.xml
<CustomField>
    <fullName>ContractID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract ID - not used</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>