force-app/main/default/objects/Quote__c/fields/DayCompare__c.field-meta.xml
<CustomField>
    <fullName>DayCompare__c</fullName>
    <label>Ngày đối chiếu</label>
    <type>Date</type>
</CustomField>