force-app/main/default/objects/Quote__c/fields/DIM_Dimension__c.field-meta.xml
<CustomField>
    <fullName>DIM_Dimension__c</fullName>
    <label>DIM (Dimension)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>