force-app/main/default/objects/Quote__c/fields/DIM_L__c.field-meta.xml
<CustomField>
    <fullName>DIM_L__c</fullName>
    <label>DIM (L)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>