force-app/main/default/objects/Quote__c/fields/EBooking__c.field-meta.xml
<CustomField>
    <fullName>EBooking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E-Booking</label>
    <referenceTo>EBooking__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>