force-app/main/default/objects/Quote__c/fields/ExternalSalesman__c.field-meta.xml
<CustomField>
    <fullName>ExternalSalesman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Salesman</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (External Salesman)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>