force-app/main/default/objects/Quote__c/fields/FinalDestination__c.field-meta.xml
<CustomField>
    <fullName>FinalDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Destination</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PortCode__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Quotes (Final Destination)</relationshipLabel>
    <relationshipName>Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>