force-app/main/default/objects/Quote__c/fields/FxRate__c.field-meta.xml
<CustomField>
    <fullName>FxRate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FxRate</label>
    <referenceTo>FxRate__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>