force-app/main/default/objects/Quote__c/fields/HBLType__c.field-meta.xml
<CustomField>
    <fullName>HBLType__c</fullName>
    <label>H B/L Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ORIGINAL</fullName>
            </value>
            <value>
                <fullName>SURRENDERED</fullName>
            </value>
            <value>
                <fullName>TELEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>