force-app/main/default/objects/Quote__c/fields/HouseFreightCollectPrepaid__c.field-meta.xml
<CustomField>
    <fullName>HouseFreightCollectPrepaid__c</fullName>
    <label>House Freight Collect/Prepaid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Prepaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>