force-app/main/default/objects/Quote__c/fields/InquiryID__c.field-meta.xml
<CustomField>
    <fullName>InquiryID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry ID</label>
    <referenceTo>Inquiry__c</referenceTo>
    <relationshipLabel>Quotes (Inquiry ID)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>