force-app/main/default/objects/Quote__c/fields/LatePaymentPenalty__c.field-meta.xml
<CustomField>
    <fullName>LatePaymentPenalty__c</fullName>
    <label>Late Payment Penalty</label>
    <type>TextArea</type>
</CustomField>