force-app/main/default/objects/Quote__c/fields/MeasurementTotalCBM__c.field-meta.xml
<CustomField>
    <fullName>MeasurementTotalCBM__c</fullName>
    <label>Measurement (Total CBM)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>