force-app/main/default/objects/Quote__c/fields/NewSales__c.field-meta.xml
<CustomField>
    <fullName>NewSales__c</fullName>
    <formula>QuotePIC__r.New_Salesman__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Sales</label>
    <type>Checkbox</type>
</CustomField>