force-app/main/default/objects/Quote__c/fields/NoteDesciption__c.field-meta.xml
<CustomField>
    <fullName>NoteDesciption__c</fullName>
    <label>Note/Desciption</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>