force-app/main/default/objects/Quote__c/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <label>Payment Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>