force-app/main/default/objects/Quote__c/fields/PickupAddress__c.field-meta.xml
<CustomField>
    <fullName>PickupAddress__c</fullName>
    <label>Pickup Address</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>