force-app/main/default/objects/Quote__c/fields/PICOfRequesterCompany__c.field-meta.xml
<CustomField>
    <fullName>PICOfRequesterCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC of Requester Company</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (PIC of Requester Company)</relationshipLabel>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>