force-app/main/default/objects/Quote__c/fields/Profit_INCL_Tax_Actual__c.field-meta.xml
<CustomField>
    <fullName>Profit_INCL_Tax_Actual__c</fullName>
    <formula>TotalSellingInclTaxActual__c  - TotalBuyingInclTaxActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit INCL Tax (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>