force-app/main/default/objects/Quote__c/fields/Profit_incl_TaxLocal__c.field-meta.xml
<CustomField>
    <fullName>Profit_incl_TaxLocal__c</fullName>
    <label>Profit incl Tax(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>