force-app/main/default/objects/Quote__c/fields/Profit_NIC_Tax_Actual__c.field-meta.xml
<CustomField>
    <fullName>Profit_NIC_Tax_Actual__c</fullName>
    <formula>TotalAmountofSellingActual__c  -  TotalAmountofBuyingActual__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit NIC Tax (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>