force-app/main/default/objects/Quote__c/fields/Profit_NIC_TaxLocal__c.field-meta.xml
<CustomField>
    <fullName>Profit_NIC_TaxLocal__c</fullName>
    <label>Profit NIC Tax(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>