force-app/main/default/objects/Quote__c/fields/ProfitINCLTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitINCLTaxLocal__c</fullName>
    <formula>TotalSellingInclTaxLocal__c -  TotalBuyingInclTaxLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit INCL Tax (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>