force-app/main/default/objects/Quote__c/fields/ProfitNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitNICTaxLocal__c</fullName>
    <formula>TotalAmountofSellingLocal__c  - TotalAmountofBuyingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit NIC Tax (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>