force-app/main/default/objects/Quote__c/fields/ProfitRatioinclTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioinclTaxFCY__c</fullName>
    <label>Profit Ratio incl Tax(FCY)%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>