force-app/main/default/objects/Quote__c/fields/ProfitRatioinclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioinclTaxLocal__c</fullName>
    <label>Profit Ratio incl Tax(Local)%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>