force-app/main/default/objects/Quote__c/fields/ProfitRatioNICTaxFCY__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioNICTaxFCY__c</fullName>
    <label>Profit Ratio NIC Tax(FCY)%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>